# Deep-Learning-Projects

./: main.py  pyproject.toml  test.py
动手实现梯度下降和线性模型训练/: 001.ipynb  001.py  ChatGPT-实验设计优化建议.md  readMe.md
大模型作业1/: 2.csv  3.csv  homework01.py  readMe.md
识别假新闻/: Fake News Detection Analysis - LSTM Classification.ipynb  fake_news.py
